SET(CMAKE_CXX_FLAGS_DEBUG "")
SET(CMAKE_CXX_FLAGS "${CMAKE_ORIG_FLAGS} ${EMAN_CXX_FLAGS} -O0")
SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} -O0")

#LINK_LIBRARIES(${BOOST_LIBRARY}  GORGON m)

INCLUDE_DIRECTORIES( ${GORGON_INSTALL_PREFIX}/source ${BOOST_INCLUDE_PATH} ${PYTHON_INCLUDE_PATH} ) 

ADD_LIBRARY(pyGORGON SHARED LibPyGorgon.cpp)
TARGET_LINK_LIBRARIES(pyGORGON GORGON ${BOOST_LIBRARY} ${PYTHON_LIBRARY} m)
INSTALL_TARGETS(/lib pyGORGON)
